# ai_data

./: environment.yaml  environment.yml  pyproject.toml
bia_vision/: datasets.py  utils.py
bia_vision/datasets/: __init__.py  broad.py  idr.py  torch.py  utils.py  zenodo.py
bia_vision/datasets/tests/: test_datasets.py  test_idr.py  test_zenodo.py
bia_vision/idr/: legacy.py
bio_vae/: augmentation.py  datasets.py
datasets/: get_data.py  zerocost.yaml
datasets/ZeroCostDL4Mic/: .gitignore  Snakefile  metadata.json
datasets/ZeroCostDL4Mic/ZeroCostDL4Mic/Label-free prediction (fnet) v2/: S-BIAD925.json
datasets/ZeroCostDL4Mic/ZeroCostDL4Mic/Stardist_v2/: S-BIAD666.json  S-BIAD895.json
datasets/ZeroCostDL4Mic/ZeroCostDL4Mic/YoloV2 dataset_v1/: S-BIAD666.json  S-BIAD991.json
datasets/ZeroCostDL4Mic/biostudies/: Stardist_v2.json  pix2pix Actin to Dapi dataset_v1.json
datasets/ZeroCostDL4Mic/metadata/: CARE (2D) .json  CycleGAN SDCM to SRRF_v1.json  DeepSTORM dataset_v1.json  Noise2Void (2D).json  Noise2Void (3D).json  Stardist_v2.json  YoloV2 dataset_v1.json  pix2pix Actin to Dapi dataset_v1.json
datasets/ZeroCostDL4Mic/metadata/Stardist_v2/: bia.yaml  (+2 more)
datasets/bbbc010/: Snakefile
datasets/idr/: Snakefile  dask_pipeline.py  dask_scheulder.py  environment.yml  pyproject.toml
datasets/idr/idr_funs/: __init__.py  airflow.py  async.py  hql.py
datasets/idr/scripts/: download_image.py  download_images.py  download_images_dask.py  generate_image_ids.py  get_hcs_screens.py  get_image_metadata.py
scripts/: idr_inference_to_coco.py
snakemake/idr/: Snakefile
(+17 files in other folders)
