[tool.poetry]
name = "idr_funs"
version = "0.1.1"
description = ""
authors = ["Craig <ctr26@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = {version = "^22.6.0", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
